...
              style: _textStyle(widget.currentIndex),
            ),
            0,
            selectedItemColor),
        _bottomItemContainer(
            Text(
              "Store",
              style: _textStyle(widget.currentIndex),
            ),
            1,
            selectedItemColor),
        _bottomItemContainer(
            Text(
...
