...
          content: Text(message),
          actions: [
            TextButton(
              onPressed: () {
                Navigator.of(context).pop();
              },
              child: Text('OK'),
            ),
          ],
        );
      });
}

...
      default:
        return 'Unknown server error';
    }
  }
  switch (badRequest['status']) {
    case 'storeName already exists':
      return 'Store name already exists.';
    case 'token verification failed':
      return 'Token verification failed. Couldn\'t establish a session.';
    case "you can’t buy this item":
      return 'You can\'t buy this item. Insufficient balance';
    case "invalid query":
      return 'Invalid search term. Please use a suitable term.';
...
