...
    } else if (state is AuthErrorState) {
      return MyErrorWidget(failure: state.failure, onRetry: submitForm);
    } else {
      // initial - loaded
      return RoundedButton(
        onPressed: submitForm,
        title: 'Log in',
      );
    }
  }

  @override
  Widget build(BuildContext context) {
...
                            .textTheme
                            .headline6!
                            .copyWith(fontSize: 16),
                      )),
                      SizedBox(height: 15),
                      RoundedButton(
                          title: 'Register',
                          onPressed: () =>
                              Navigator.of(context).pushReplacement(
                                MaterialPageRoute(
                                    builder: (context) => SignUpScreen()),
                              )),
                    ],
...
